[gd_scene load_steps=6 format=3 uid="uid://bflc7w7vj3g8v"]

[ext_resource type="Script" uid="uid://dbcsqvoocv61s" path="res://stage_1_ready.gd" id="1_abcde"]
[ext_resource type="Texture2D" uid="uid://dgtm62i07cy5w" path="res://Img/pages/1ready.png" id="2_fghij"]

[sub_resource type="Animation" id="Animation_overlay_fade_in"]
resource_name = "overlay_fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Overlay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_description_fade_in"]
resource_name = "description_fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DescriptionLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ready"]
_data = {
&"description_fade_in": SubResource("Animation_description_fade_in"),
&"overlay_fade_in": SubResource("Animation_overlay_fade_in")
}

[node name="Stage1Ready" type="Node2D"]
script = ExtResource("1_abcde")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_fghij")
expand_mode = 1

[node name="Overlay" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.85)

[node name="DescriptionLabel" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1.0
offset_top = 200.0
offset_right = 1153.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "- 보스 체력이 66%에 도달하면 공중에서 분열되는 탄을 추가로 사용합니다!
- 보스 체력이 33%에 도달하면 3연발 발사를 추가로 사용합니다!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartPromptLabel" type="Label" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 426.0
offset_top = 550.0
offset_right = 726.0
offset_bottom = 573.0
grow_horizontal = 2
grow_vertical = 0
text = "--PRESS SPACE TO START--"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InitialWaitTimer" type="Timer" parent="."]
wait_time = 1.0
one_shot = true

[node name="DescriptionWaitTimer" type="Timer" parent="."]
wait_time = 1.0
one_shot = true

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ready")
}

[connection signal="timeout" from="InitialWaitTimer" to="." method="_on_initial_wait_timer_timeout"]
[connection signal="timeout" from="DescriptionWaitTimer" to="." method="_on_description_wait_timer_timeout"]
[connection signal="timeout" from="BlinkTimer" to="." method="_on_blink_timer_timeout"]
